--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,12 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "types": ["node"],
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "declaration": true
+    "baseUrl": ".",
+    "paths": {
+      "snappy": ["./packages/snappy/src/index.ts"],
+      "snappy/*": ["./packages/snappy/src/*"]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["packages/*/src/**/*"],
+  "exclude": ["node_modules"]
 }
