--- a/packages/snappy/package.json
+++ b/packages/snappy/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "start": "tsx src/index.ts"
+    "dev": "dotenv -e .env.dev -- tsx watch src/index.ts",
+    "start": "dotenv -e .env -- tsx src/index.ts"
   },
   "keywords": [
     "telegram",
