--- a/packages/snappy/package.json
+++ b/packages/snappy/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "dotenv -e .env.dev -- tsx watch src/index.ts",
-    "start": "dotenv -e .env -- tsx src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts"
   },
   "keywords": [
     "telegram",
@@ -19,6 +19,6 @@
   "license": "MIT",
   "dependencies": {
     "gramio": "^0.4.11",
-    "dotenv": "^16.4.5"
+    "zod": "^3.24.0"
   }
 }
