--- a/packages/snappy/config.json.example
+++ b/packages/snappy/config.json.example
@@ -1,7 +1,6 @@
 {
   "BOT_TOKEN": "your_telegram_bot_token_here",
-  "GIGACHAT_CLIENT_ID": "your_gigachat_client_id",
-  "GIGACHAT_CLIENT_SECRET": "your_gigachat_client_secret",
+  "GIGACHAT_AUTH_KEY": "your_gigachat_authorization_key",
   "GIGACHAT_SCOPE": "GIGACHAT_API_PERS",
   "YOOKASSA_SHOP_ID": "your_shop_id",
   "YOOKASSA_SECRET_KEY": "your_secret_key",
