--- a/packages/snappy/package.json
+++ b/packages/snappy/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "gramio": "^0.4.11",
     "win-ca": "^3.5.1",
-    "zod": "^3.24.0"
+    "zod": "^3.24.0",
+    "gigachat": "^0.0.18"
   }
 }
