--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "markdownlint-cli": "^0.47.0",
     "prettier": "^3.2.4",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@cspell/dict-ru_ru": "^2.3.2"
   }
 }
