--- a/packages/snappy/package.json
+++ b/packages/snappy/package.json
@@ -1,26 +1,16 @@
 {
   "name": "snappy",
-  "version": "1.0.0",
-  "description": "Telegram bot for content improvement powered by GigaChat AI",
+  "version": "0.0.0",
   "type": "module",
   "main": "./src/index.ts",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts"
   },
-  "keywords": [
-    "telegram",
-    "bot",
-    "content",
-    "ai",
-    "gigachat"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
+    "gigachat": "^0.0.18",
     "gramio": "^0.4.11",
     "win-ca": "^3.5.1",
-    "zod": "^3.24.0",
-    "gigachat": "^0.0.18"
+    "zod": "^3.24.0"
   }
 }
