--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
   },
   "devDependencies": {
     "@cspell/dict-ru_ru": "^2.3.2",
+    "@snappy/config": "workspace:*",
     "@types/node": "^25.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.54.0",
-    "@typescript-eslint/parser": "^8.54.0",
     "cspell": "^9.6.2",
-    "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
     "jscpd": "^4.0.5",
     "markdownlint-cli": "^0.47.0",
     "prettier": "^3.2.4",
