--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -12,5 +12,8 @@
     "@typescript-eslint/parser": "^8.54.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8"
+  },
+  "devDependencies": {
+    "eslint-plugin-perfectionist": "^5.4.0"
   }
 }
