--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "ci": "bun run lint:tsc && bun run lint:eslint && bun run lint:prettier && bun run lint:cspell && bun run lint:jscpd && bun run lint:markdown",
-    "dev": "bun run --filter snappy --elide-lines=0 dev",
+    "dev": "bun run --filter @snappy/snappy --elide-lines=0 dev",
     "format": "prettier --write \"packages/**/src/**/*.{ts,js,json,md}\" \"*.{md,json,js}\"",
     "format:check": "prettier --check \"packages/**/src/**/*.{ts,js,json,md}\" \"*.{md,json,js}\"",
     "lint:cspell": "cspell \"**/*.{ts,md,json,js}\" --no-progress --config cspell.config.js",
@@ -17,7 +17,7 @@
     "lint:markdown": "markdownlint \"**/*.md\" --ignore node_modules",
     "lint:prettier": "prettier --check \"packages/**/src/**/*.{ts,js,json,md}\" \"*.{md,json,js}\"",
     "lint:tsc": "tsc --noEmit",
-    "start": "bun run --filter snappy --elide-lines=0 start"
+    "start": "bun run --filter @snappy/snappy --elide-lines=0 start"
   },
   "devDependencies": {
     "@cspell/dict-ru_ru": "^2.3.2",
