--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -8,12 +8,11 @@
   },
   "dependencies": {
     "@stylistic/eslint-plugin": "^5.7.1",
-    "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8"
-  },
-  "devDependencies": {
-    "eslint-plugin-perfectionist": "^5.4.0"
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-perfectionist": "^5.4.0",
+    "globals": "^17.2.0",
+    "typescript-eslint": "^8.54.0"
   }
 }
