--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/parser": "^8.54.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-functional": "^9.0.2",
     "eslint-plugin-perfectionist": "^5.4.0",
     "globals": "^17.2.0",
     "typescript-eslint": "^8.54.0"
