--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,14 +7,22 @@
     "./js": "./src/index.esm.js"
   },
   "dependencies": {
+    "@cspell/dict-ru_ru": "^2.3.2",
+    "@eslint/js": "^9.39.2",
     "@stylistic/eslint-plugin": "^5.7.1",
     "@typescript-eslint/parser": "^8.54.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-check-file": "^3.3.1",
     "eslint-plugin-functional": "^9.0.2",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-perfectionist": "^5.4.0",
+    "eslint-plugin-unicorn": "^62.0.0",
     "globals": "^17.2.0",
+    "prettier-plugin-pkg": "^0.21.2",
+    "tsx": "^4.21.0",
     "typescript-eslint": "^8.54.0"
   }
 }
+
