--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -18,7 +18,11 @@
     "eslint-plugin-functional": "^9.0.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-perfectionist": "^5.4.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-regexp": "^3.0.0",
+    "eslint-plugin-sonarjs": "^3.0.6",
     "eslint-plugin-unicorn": "^62.0.0",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^17.2.0",
     "prettier-plugin-pkg": "^0.21.2",
     "tsx": "^4.21.0",
