--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,7 +6,7 @@
     "shardulm94.trailing-spaces",
     "usernamehw.errorlens",
     "kisstkondoros.vscode-codemetrics",
-    "Orta.vscode-jest",
+    "oven.bun-vscode",
     "yoavbls.pretty-ts-errors",
     "fabiospampinato.vscode-highlight",
     // Linters
