--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "ci": "bun lint:tsc && bun lint:eslint && bun lint:prettier && bun lint:cspell && bun lint:jscpd && bun lint:markdown",
+    "ci": "bun test && bun lint:tsc && bun lint:eslint && bun lint:prettier && bun lint:cspell && bun lint:jscpd && bun lint:markdown",
     "dev": "bun run --filter @snappy/snappy --elide-lines=0 dev",
     "fix:eslint": "eslint --fix .",
     "fix:prettier": "prettier --write .",
@@ -17,8 +17,7 @@
     "lint:markdown": "markdownlint .",
     "lint:prettier": "prettier --check .",
     "lint:tsc": "tsc --noEmit",
-    "start": "bun run --filter @snappy/snappy --elide-lines=0 start",
-    "test": "bun test"
+    "start": "bun run --filter @snappy/snappy --elide-lines=0 start"
   },
   "dependencies": {
     "@snappy/config": "workspace:*"
@@ -34,3 +33,4 @@
     "typescript": "^5.9.3"
   }
 }
+
