--- a/.github/workflows/setup-server.yml
+++ b/.github/workflows/setup-server.yml
@@ -1,3 +1,4 @@
+# cspell:words webfactory endssh
 name: Setup Server
 
 on:
@@ -78,7 +79,7 @@ jobs:
               echo "📥 Installing PM2..."
               sudo npm install -g pm2
               
-              # Настройка PM2 для автозапуска при старте системы
+              # Настройка PM2 для авто запуска при старте системы
               sudo pm2 startup systemd -u ${USER} --hp ${HOME} || true
               
               echo "✅ PM2 installed: $(pm2 --version)"
