--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,26 @@ on:
 
 jobs:
   ci:
-    name: Run CI Checks
+    name: ${{ matrix.task.name }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        task:
+          - name: Run Tests
+            command: bun test
+          - name: TypeScript Check
+            command: bun lint:tsc
+          - name: ESLint Check
+            command: bun lint:eslint
+          - name: Prettier Check
+            command: bun lint:prettier
+          - name: CSpell Check
+            command: bun lint:cspell
+          - name: JSCPD Check
+            command: bun lint:jscpd
+          - name: Markdown Lint Check
+            command: bun lint:markdown
 
     steps:
       - name: Checkout code
@@ -20,5 +38,5 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Run CI
-        run: bun run ci
+      - name: Run ${{ matrix.task.name }}
+        run: ${{ matrix.task.command }}
