--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,14 +85,14 @@ jobs:
               ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
                 "cd ${REMOTE_PATH} && export PATH=\"\$HOME/.bun/bin:\$PATH\" && \
                  pm2 delete snappy-bot 2>/dev/null || true && \
-                 cd packages/snappy && \
+                 cd packages/snappy-bot && \
                  SNAPPY_CONFIG=\"${SNAPPY_CONFIG_B64}\" pm2 start \"\$HOME/.bun/bin/bun\" --name snappy-bot --update-env -- run start && \
                  pm2 save"
             else
               ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
                 "cd ${REMOTE_PATH} && export PATH=\"\$HOME/.bun/bin:\$PATH\" && \
                  pm2 delete snappy-bot 2>/dev/null || true && \
-                 cd packages/snappy && \
+                 cd packages/snappy-bot && \
                  pm2 start \"\$HOME/.bun/bin/bun\" --name snappy-bot -- run start && \
                  pm2 save"
             fi
