--- a/package.json
+++ b/package.json
@@ -6,29 +6,13 @@
   "workspaces": [
     "packages/*"
   ],
-  "scripts": {
-    "ci": "bun test && bun lint:tsc && bun lint:eslint && bun lint:prettier && bun lint:cspell && bun lint:jscpd && bun lint:markdown",
-    "dev": "bun --watch packages/snappy-bot/src/main.ts",
-    "fix:eslint": "eslint --fix .",
-    "fix:prettier": "prettier --write .",
-    "lint:cspell": "cspell .",
-    "lint:eslint": "eslint .",
-    "lint:jscpd": "jscpd .",
-    "lint:markdown": "markdownlint .",
-    "lint:prettier": "prettier --check .",
-    "lint:tsc": "tsc --noEmit",
-    "start": "bun packages/snappy-bot/src/main.ts"
-  },
   "dependencies": {
-    "@snappy/config": "workspace:*"
+    "@snappy/config": "workspace:*",
+    "@snappy/do": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "^1.3.8",
     "@types/node": "^25.1.0",
-    "cspell": "^9.6.2",
-    "jscpd": "^4.0.5",
-    "markdownlint-cli": "^0.47.0",
-    "prettier": "^3.2.4",
     "typescript": "^5.9.3"
   }
 }
