--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,19 +12,19 @@ jobs:
       matrix:
         task:
           - name: 🧪 Run Tests
-            command: bun do test
+            arg: test
           - name: 📘 TypeScript Check
-            command: bun do lint:tsc
+            arg: lint:tsc
           - name: 📐 ESLint Check
-            command: bun do lint:eslint
+            arg: lint:eslint
           - name: 💅 Prettier Check
-            command: bun do lint:prettier
+            arg: lint:prettier
           - name: 📝 CSpell Check
-            command: bun do lint:cspell
+            arg: lint:cspell
           - name: 🔍 JSCPD Check
-            command: bun do lint:jscpd
+            arg: lint:jscpd
           - name: 📄 Markdown Lint Check
-            command: bun do lint:markdown
+            arg: lint:markdown
 
     steps:
       - name: Checkout code
@@ -38,23 +38,5 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Diagnostics
-        run: |
-          echo "=== Bun version ==="
-          bun --version
-          echo "=== Root dir ==="
-          ls -la
-          echo "=== node_modules (root) ==="
-          ls -la node_modules 2>/dev/null || echo "node_modules missing"
-          echo "=== node_modules/.bin ==="
-          ls -la node_modules/.bin 2>/dev/null || echo "node_modules/.bin missing"
-          echo "=== @snappy/do in node_modules ==="
-          ls -la node_modules/@snappy 2>/dev/null || echo "@snappy missing"
-          ls -la node_modules/@snappy/do 2>/dev/null || echo "@snappy/do missing"
-          echo "=== which do ==="
-          which do 2>/dev/null || true
-          echo "=== bun do --help (exit code ignored) ==="
-          bun do --help 2>&1 || true
-
       - name: Run ${{ matrix.task.name }}
-        run: ${{ matrix.task.command }}
+        run: bun run packages/do/src/main.cli.ts ${{ matrix.task.arg }}
