--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@
 name: Deploy to Server
 
 on:
-  workflow_dispatch: # Только ручной запуск через GitHub UI
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -23,100 +23,29 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.9.0
+        uses: webfactory/ssh-agent@v0.9.1
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Add server to known hosts
-        run: |
-          ssh-keyscan -p ${{ secrets.SSH_PORT || 22 }} -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -p 22 -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy to server
         env:
           SSH_HOST: ${{ secrets.SSH_HOST }}
           SSH_USER: ${{ secrets.SSH_USER }}
-          SSH_PORT: ${{ secrets.SSH_PORT || 22 }}
-          REMOTE_PATH: ${{ secrets.REMOTE_PATH }}
-          USE_PM2: ${{ secrets.USE_PM2 || 'true' }}
-          SNAPPY_CONFIG_JSON: ${{ secrets.SNAPPY_CONFIG }}
+          SNAPPY_CONFIG: ${{ secrets.SNAPPY_CONFIG }}
         run: |
-          echo "🚀 Starting deployment..."
+          set -e
+          REMOTE_PATH=/home/deploy/snappy
+          SSH_OPTS="-p 22 -o StrictHostKeyChecking=no"
+          TARGET="${SSH_USER}@${SSH_HOST}"
+          SNAPPY_CONFIG_B64=$(echo -n "${SNAPPY_CONFIG}" | base64 -w 0)
 
-          # Кодирование конфигурации в base64, если она предоставлена
-          if [ -n "${SNAPPY_CONFIG_JSON}" ]; then
-            echo "🔐 Encoding SNAPPY_CONFIG to base64..."
-            SNAPPY_CONFIG_B64=$(echo -n "${SNAPPY_CONFIG_JSON}" | base64 -w 0)
-          else
-            echo "⚠️  Warning: SNAPPY_CONFIG secret is not set. Make sure config.json exists on the server."
-            SNAPPY_CONFIG_B64=""
-          fi
+          ssh ${SSH_OPTS} "${TARGET}" "mkdir -p ${REMOTE_PATH}"
 
-          # Создание директории на сервере, если её нет
-          echo "📁 Ensuring remote directory exists..."
-          ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
-            "mkdir -p ${REMOTE_PATH}"
+          rsync -avz --delete -e "ssh ${SSH_OPTS}" \
+            --exclude='node_modules' --exclude='.git' --exclude='.github' \
+            ./ "${TARGET}:${REMOTE_PATH}/"
 
-          # Синхронизация файлов
-          echo "📦 Syncing files..."
-          rsync -avz --delete \
-            -e "ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no" \
-            --exclude='node_modules' \
-            --exclude='.git' \
-            --exclude='.github' \
-            --exclude='.jscpd' \
-            --exclude='bun.lockb' \
-            --exclude='*.log' \
-            --exclude='.vscode' \
-            --exclude='deploy.config.json' \
-            --exclude='.env' \
-            --exclude='*.bat' \
-            --exclude='.DS_Store' \
-            ./ ${SSH_USER}@${SSH_HOST}:${REMOTE_PATH}/
-
-          # Установка зависимостей на сервере
-          echo "📥 Installing dependencies..."
-          ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
-            "cd ${REMOTE_PATH} && export PATH=\"\$HOME/.bun/bin:\$PATH\" && bun install --production"
-
-          # Перезапуск приложения
-          if [ "${USE_PM2}" = "true" ]; then
-            echo "🔄 Restarting with PM2..."
-            if [ -n "${SNAPPY_CONFIG_B64}" ]; then
-              ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
-                "cd ${REMOTE_PATH} && export PATH=\"\$HOME/.bun/bin:\$PATH\" && \
-                 pm2 delete snappy-bot 2>/dev/null || true && \
-                 cd packages/snappy-bot && \
-                 SNAPPY_CONFIG=\"${SNAPPY_CONFIG_B64}\" pm2 start \"\$HOME/.bun/bin/bun\" --name snappy-bot --update-env -- run start && \
-                 pm2 save"
-            else
-              ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
-                "cd ${REMOTE_PATH} && export PATH=\"\$HOME/.bun/bin:\$PATH\" && \
-                 pm2 delete snappy-bot 2>/dev/null || true && \
-                 cd packages/snappy-bot && \
-                 pm2 start \"\$HOME/.bun/bin/bun\" --name snappy-bot -- run start && \
-                 pm2 save"
-            fi
-            
-            echo "📊 PM2 Status:"
-            ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
-              "pm2 status snappy-bot"
-          else
-            echo "🔄 Restarting with systemd..."
-            if [ -n "${SNAPPY_CONFIG_B64}" ]; then
-              ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
-                "sudo mkdir -p /etc/systemd/system/snappy-bot.service.d && \
-                 echo '[Service]' | sudo tee /etc/systemd/system/snappy-bot.service.d/env.conf && \
-                 echo 'Environment=\"SNAPPY_CONFIG=${SNAPPY_CONFIG_B64}\"' | sudo tee -a /etc/systemd/system/snappy-bot.service.d/env.conf && \
-                 sudo systemctl daemon-reload && \
-                 sudo systemctl restart snappy-bot"
-            else
-              ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
-                "sudo systemctl restart snappy-bot"
-            fi
-            
-            echo "📊 Service Status:"
-            ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \
-              "sudo systemctl status snappy-bot --no-pager -l"
-          fi
-
-          echo "✅ Deployment completed successfully!"
+          ssh ${SSH_OPTS} "${TARGET}" "bash -s" -- "${REMOTE_PATH}" "${SNAPPY_CONFIG_B64}" < .github/scripts/deploy.sh
