--- a/packages/snappy-bot/package.json
+++ b/packages/snappy-bot/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "type": "module",
   "main": "./src/main.ts",
+  "scripts": {
+    "start": "bun run src/main.ts"
+  },
   "dependencies": {
     "@snappy/snappy": "workspace:*",
     "gramio": "^0.4.11",
