--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "live-server . --port=4321",
     "preview": "live-server . --port=4321 --no-browser",
-    "start": "serve . -l 80"
+    "start": "bun run src/main.ts"
   },
   "dependencies": {
-    "serve": "^14.2.4"
+    "serve-static": "^2.0.7"
   },
   "devDependencies": {
     "live-server": "^1.2.2"
