--- a/.github/actions/build-and-release/action.yml
+++ b/.github/actions/build-and-release/action.yml
@@ -31,6 +31,7 @@ runs:
       id: release
       shell: bash
       env:
+        GH_TOKEN: ${{ github.token }}
         RELEASE_TAG: release-${{ github.sha }}
       run: |
         gh release delete "$RELEASE_TAG" --yes 2>/dev/null || true
