--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
         uses: ./.github/actions/build-and-release
 
       - name: 📥 Download release artifact
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           VERSION="${{ inputs.version || steps.build.outputs.version }}"
           gh release download "$VERSION" --repo ${{ github.repository }} --pattern '*.zip' -O dist.zip
