--- a/packages/snappy-bot/package.json
+++ b/packages/snappy-bot/package.json
@@ -2,11 +2,13 @@
   "name": "@snappy/snappy-bot",
   "version": "0.0.0",
   "type": "module",
+  "private": true,
   "main": "./src/main.ts",
   "scripts": {
     "start": "bun run src/main.ts"
   },
   "dependencies": {
+    "@snappy/core": "workspace:*",
     "@snappy/snappy": "workspace:*",
     "gramio": "^0.4.11",
     "zod": "^4.3.6"
