--- a/packages/snappy-bot/config.json.example
+++ b/packages/snappy-bot/config.json.example
@@ -1,6 +1,6 @@
 {
-  "BOT_TOKEN": "your_telegram_bot_token_here",
-  "GIGACHAT_AUTH_KEY": "your_gigachat_authorization_key",
-  "YOOKASSA_SHOP_ID": "your_shop_id",
-  "YOOKASSA_SECRET_KEY": "your_secret_key"
+  "botToken": "your_telegram_bot_token_here",
+  "gigaChatAuthKey": "your_gigachat_authorization_key",
+  "yooKassaShopId": "your_shop_id",
+  "yooKassaSecretKey": "your_secret_key"
 }
