migrate to Vite

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "@snappy/do": "workspace:*"
+    "@snappy/do": "workspace:*",
+    "vite": "8.0.0-beta.13"
   }
 }
