--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,10 +6,12 @@
   "main": "./src/index.ts",
   "dependencies": {
     "@snappy/snappy-bot": "workspace:*",
-    "serve-static": "^2.0.7",
+    "compression": "^1.8.1",
+    "express": "^5.2.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/serve-static": "^2.2.0"
+    "@types/compression": "^1.8.1",
+    "@types/express": "^5.0.6"
   }
 }
