--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -2,5 +2,16 @@
   "name": "@snappy/snappy-site",
   "version": "0.0.0",
   "type": "module",
-  "private": true
+  "private": true,
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite"
+  },
+  "dependencies": {
+    "@fontsource-variable/inter": "^5.2.8",
+    "aos": "^2.3.4"
+  },
+  "devDependencies": {
+    "vite": "8.0.0-beta.13"
+  }
 }
