--- a/packages/do/package.json
+++ b/packages/do/package.json
@@ -40,6 +40,9 @@
     "open": "^11.0.0",
     "prettier": "^3.2.4",
     "prettier-plugin-pkg": "^0.21.2",
+    "stylelint": "^17.2.0",
+    "stylelint-config-recess-order": "^7.6.1",
+    "stylelint-config-standard": "^40.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.55.0",
