--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,7 @@
     "dbaeumer.vscode-eslint",
     "DavidAnson.vscode-markdownlint",
     "streetsidesoftware.code-spell-checker",
+    "stylelint.vscode-stylelint",
     // Misc
     "yzhang.markdown-all-in-one",
     "shd101wyy.markdown-preview-enhanced"
