--- a/packages/snappy-bot/package.json
+++ b/packages/snappy-bot/package.json
@@ -6,6 +6,7 @@
   "main": "./src/index.ts",
   "dependencies": {
     "@snappy/core": "workspace:*",
+    "@snappy/db": "workspace:*",
     "@snappy/snappy": "workspace:*",
     "@snappy/yoo-kassa": "workspace:*",
     "gramio": "^0.4.12"
