--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "packages/*"
   ],
   "dependencies": {
+    "@snappy/config": "workspace:*",
     "@snappy/do": "workspace:*",
-    "vite": "8.0.0-beta.13"
+    "prisma": "^7.3.0"
   }
 }
