--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@snappy/server",
+  "name": "@snappy/config",
   "version": "0.0.0",
   "type": "module",
   "private": true,
   "main": "./src/index.ts",
   "dependencies": {
-    "zod": "^4.3.6"
+    "dotenv": "^17.2.4"
   }
 }
