--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -4,9 +4,14 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@fontsource-variable/inter": "^5.2.8"
+    "@fontsource-variable/inter": "^5.2.8",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.0.0"
   },
   "devDependencies": {
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "vite": "8.0.0-beta.13"
   }
 }
