--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.0",
   "type": "module",
   "private": true,
+  "scripts": {
+    "build": "vite build",
+    "build:client": "vite build",
+    "build:ssr": "vite build --ssr src/site/entry-server.tsx --outDir dist/server",
+    "dev": "bun run server.ts"
+  },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
     "react": "^19.0.0",
@@ -10,8 +16,10 @@
     "react-router-dom": "^7.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "express": "^5.2.1",
     "vite": "8.0.0-beta.13"
   }
 }
