--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
+    "isomorphic-dompurify": "^3.0.0-rc.2",
+    "js-beautify": "^1.15.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/js-beautify": "^1.14.3",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "express": "^5.2.1",
