--- a/packages/snappy-site/package.json
+++ b/packages/snappy-site/package.json
@@ -1,28 +1,1 @@
-{
-  "name": "@snappy/snappy-site",
-  "version": "0.0.0",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "build": "vite build",
-    "build:client": "vite build",
-    "build:ssr": "vite build --ssr src/site/entry-server.tsx --outDir dist/server",
-    "dev": "bun run server.ts"
-  },
-  "dependencies": {
-    "@fontsource-variable/inter": "^5.2.8",
-    "isomorphic-dompurify": "^3.0.0-rc.2",
-    "js-beautify": "^1.15.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.0.0"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/js-beautify": "^1.14.3",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "express": "^5.2.1",
-    "vite": "8.0.0-beta.13"
-  }
-}
+{"name":"@snappy/snappy-site","version":"0.0.0","type":"module","private":true,"exports":{"./ssr":"./src/Ssr.ts"},"scripts":{"build":"vite build","build:client":"vite build","build:ssr":"vite build --ssr src/site/entry-server.tsx --outDir dist/server","dev":"bun run server.ts"},"dependencies":{"@fontsource-variable/inter":"^5.2.8","isomorphic-dompurify":"^3.0.0-rc.2","js-beautify":"^1.15.4","react":"^19.0.0","react-dom":"^19.0.0","react-router-dom":"^7.0.0"},"devDependencies":{"@types/express":"^5.0.6","@types/js-beautify":"^1.14.3","@types/react":"^19.0.0","@types/react-dom":"^19.0.0","express":"^5.2.1","vite":"8.0.0-beta.13"}}
